Add (localization) support for forwarded messages and update UI notifications: introduce new labels for forwarded messages, enhance error notifications refactor message handling in the email parser and popup logic.

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -175,6 +175,10 @@
     "message": "Empfangen am",
     "description": "Label for date received."
   },
+  "PopupForwardedMessage": {
+    "message": "Weitergeleitete Nachricht",
+    "description": "Label for forwarded message."
+  },
   "PopupButtonSubmit": {
     "message": "Ticket erstellen",
     "description": "Title submit Button."
