Update README, improve error messages, and enhance options handling - Added error messages for invalid and unreachable GitLab URLs in localization files. - Refactored options handling to check URL reachability before saving. - Changed script tags to type="module" in HTML files for better compatibility. - Created VENDORS.md to document third-party libraries used in the add-on.

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -55,6 +55,14 @@
     "message": "Fehler beim Laden der Einstellungen!",
     "description": "Error for not loaded options."
   },
+  "OptionsErrorInvalidUrl": {
+    "message": "Ungültige GitLab URL!",
+    "description": "Error for invalid GitLab URL."
+  },
+  "OptionsErrorUnreachableUrl": {
+    "message": "GitLab URL nicht erreichbar!",
+    "description": "Error for unreachable GitLab URL."
+  },
   "OptionsErrorOptionsSaved": {
     "message": "Fehler beim Speichern der Einstellungen!",
     "description": "Error for not saved options."
