--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,7 +4,7 @@
         "description": "Name of the extension."
     },
     "extensionDescription": {
-        "message": "Creates GitLab issues from emails.",
+        "message": "Creates GitLab Issues from emails.",
         "description": "Description of the extension."
     },
     "BrowserActionTitle": {
