Refactor localization keys and improve popup handling
- Updated localization keys in messages.json and manifest.json to use consistent casing.
- Enhanced error handling in API calls and popup closure.
- Improved notification display function to utilize localized extension name.
- Cleaned up unnecessary code related to API base URL.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,9 +1,9 @@
 {
-    "extensionName": {
+    "ExtensionName": {
         "message": "GitLab Issue Creator",
         "description": "Name of the extension."
     },
-    "extensionDescription": {
+    "ExtensionDescription": {
         "message": "Creates GitLab Issues from emails.",
         "description": "Description of the extension."
     },
