--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,9 +1,9 @@
 {
-  "extensionName": {
+  "ExtensionName": {
     "message": "GitLab Issue Creator",
     "description": "Name of the extension."
   },
-  "extensionDescription": {
+  "ExtensionDescription": {
     "message": "Erstellt GitLab-Tickets aus E-Mails.",
     "description": "Description of the extension."
   },
