--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -115,6 +115,10 @@
     "message": "Zuständige laden",
     "description": "Label for add loading of assignees."
   },
+  "OptionsLabelEnableWatermark": {
+    "message": "Wasserzeichen hinzufügen",
+    "description": "Label for enable watermark."
+  },
   "OptionsLabelDisableCache": {
     "message": "Cache deaktivieren",
     "description": "Label for disable caching."
@@ -126,6 +130,10 @@
   "OptionsTooltipTokenLink": {
     "message": "Öffne die Seite für persönliche Tokens, erstelle einen neuen mit api-Recht, kopiere ihn und füge ihn hier ein.",
     "description": "Tooltip for access token link."
+  },
+  "OptionsTooltipEnableWatermark": {
+    "message": "Aktiviert: Ein Wasserzeichen wird dem Ticket hinzugefügt. Deaktiviert: Kein Wasserzeichen.",
+    "description": "Tooltip for enable watermark."
   },
   "OptionsTooltipDisableCache": {
     "message": "Aktiviert: Cache deaktivieren. Deaktiviert: Cache aktivieren.",
